add: add schdule event and paths-ignore filter

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -3,6 +3,9 @@ name: Ubuntu
 on:
     push:
         branches: [master]
+        paths-ignore: README.md
+    schedule:
+        - cron: '0 15 * * 6'
     workflow_dispatch:
 
 jobs:
